force-app/main/default/objects/Climate_Corps_Engagement__c/Climate_Corps_Engagement__c.object-meta.xml
<CustomObject>
    <description>Tracks host recruitment efforts, links the host to their fellow once the match is made, and tracks all information related to that fellowship</description>
    <label>Climate Corps Engagement</label>
    <nameField>
        <label>Engagement Name (Organization, Year)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Climate Corps Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>