force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Additional_Contact_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_1_Email__c</fullName>
    <formula>Additional_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruitment Contact 1 Email</label>
    <type>Text</type>
</CustomField>