force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Additional_notes_from_debrief_call__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes_from_debrief_call__c</fullName>
    <label>Additional notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>