force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Alumni_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Alumni Mentor)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements7</relationshipName>
    <type>Lookup</type>
</CustomField>