force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Annual_CO2_Reductions_Metric_Tons__c.field-meta.xml
<CustomField>
    <fullName>Annual_CO2_Reductions_Metric_Tons__c</fullName>
    <label>Annual CO2 Reductions (Metric Tons)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>