force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Annual_kWh_Savings_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_kWh_Savings_kWh__c</fullName>
    <label>Annual kWh Savings (kWh)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>