force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Available_public_transportation__c.field-meta.xml
<CustomField>
    <fullName>Available_public_transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available public transportation?</label>
    <type>Checkbox</type>
</CustomField>