force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Building_Data_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Building_Data_Analyzed__c</fullName>
    <description>if you analyzed data then how many buidings did you analyzed</description>
    <inlineHelpText>if you analyzed data then how many buidings did you analyzed</inlineHelpText>
    <label>Building Data Analyzed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>