force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Care_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Care_Call_Notes__c</fullName>
    <label>CARE Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>