force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Challenging_for_matching__c.field-meta.xml
<CustomField>
    <fullName>Challenging_for_matching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority Match</label>
    <type>Checkbox</type>
</CustomField>