force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Complete_Post_Training_Items__c.field-meta.xml
<CustomField>
    <fullName>Complete_Post_Training_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Post Training Items</label>
    <type>Checkbox</type>
</CustomField>