force-app/main/default/objects/Climate_Corps_Engagement__c/fields/CompleteTrainingPreWork__c.field-meta.xml
<CustomField>
    <fullName>CompleteTrainingPreWork__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please complete the training pre-work as described in this document prior to the start of the Fellow Training.</inlineHelpText>
    <label>Complete Training Pre-Work</label>
    <type>Checkbox</type>
</CustomField>