force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Fellow Name)</relationshipLabel>
    <relationshipName>Climate_Corp_Fellows</relationshipName>
    <type>Lookup</type>
</CustomField>