force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruitment Contact Email</label>
    <type>Text</type>
</CustomField>