force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Data_Engagement_Added_to_Portal__c.field-meta.xml
<CustomField>
    <fullName>Data_Engagement_Added_to_Portal__c</fullName>
    <description>Heller created 2021</description>
    <label>Data Engagement Added to Portal</label>
    <type>Date</type>
</CustomField>