force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Date_Care_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Care_Call_Complete__c</fullName>
    <label>Date Care Call Complete</label>
    <type>Date</type>
</CustomField>