force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Date_committed__c.field-meta.xml
<CustomField>
    <fullName>Date_committed__c</fullName>
    <label>Date committed</label>
    <type>Date</type>
</CustomField>