force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Date_Engagement_Added_to_Portal__c.field-meta.xml
<CustomField>
    <fullName>Date_Engagement_Added_to_Portal__c</fullName>
    <label>Date Engagement Added to Portal</label>
    <type>Date</type>
</CustomField>