force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Date_of_Kick_Off_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Kick_Off_Call_Complete__c</fullName>
    <label>Date Kick-Off Call Complete</label>
    <type>Date</type>
</CustomField>