force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Deadline_for_Pre_Fellowship_Prep__c.field-meta.xml
<CustomField>
    <fullName>Deadline_for_Pre_Fellowship_Prep__c</fullName>
    <label>Deadline for Pre-Fellowship Prep</label>
    <type>Date</type>
</CustomField>