force-app/main/default/objects/Climate_Corps_Engagement__c/fields/EDF_Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>EDF_Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Manages engagement during summer. Identified after hosts have submitted applications.</inlineHelpText>
    <label>EDF Engagement Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Climate_Corps_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>