force-app/main/default/objects/Climate_Corps_Engagement__c/fields/EDF_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>EDF_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Oversees broader relationship with organization. Generally responsible for host recruiting.</inlineHelpText>
    <label>EDF Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Climate_Corps_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>