force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Engagement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Notes__c</fullName>
    <label>Key Stakeholder Notes from Final Report</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>