force-app/main/default/objects/Climate_Corps_Engagement__c/fields/ExitInt_Best_Practices__c.field-meta.xml
<CustomField>
    <fullName>ExitInt_Best_Practices__c</fullName>
    <label>Best Practices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>