force-app/main/default/objects/Climate_Corps_Engagement__c/fields/ExitInt_Suggested_Future_Fellow_Work__c.field-meta.xml
<CustomField>
    <fullName>ExitInt_Suggested_Future_Fellow_Work__c</fullName>
    <label>Suggested Future Fellow Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>