force-app/main/default/objects/Climate_Corps_Engagement__c/fields/ExitInt_Summary_of_Barriers__c.field-meta.xml
<CustomField>
    <fullName>ExitInt_Summary_of_Barriers__c</fullName>
    <label>Summary of Barriers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>