force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Application_Email__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Application_Email__c</fullName>
    <formula>Fellow_Application__r.Fellow_Applicant_Email__c</formula>
    <label>Fellow  Application Email</label>
    <type>Text</type>
</CustomField>