force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_first_name__c.field-meta.xml
<CustomField>
    <fullName>Fellow_first_name__c</fullName>
    <formula>Fellow_Application__r.Applicant_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellow first name</label>
    <type>Text</type>
</CustomField>