force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_Name__c.field-meta.xml
<CustomField>
    <fullName>Fellow_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fellow Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Fellow Name)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements4</relationshipName>
    <type>Lookup</type>
</CustomField>