force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Fellow_suggested_skillsets__c.field-meta.xml
<CustomField>
    <fullName>Fellow_suggested_skillsets__c</fullName>
    <label>Fellow suggested skillsets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Energy Auditing Experience</fullName>
            </value>
            <value>
                <fullName>Tech/IT Skills</fullName>
            </value>
            <value>
                <fullName>Data Center Experience</fullName>
            </value>
            <value>
                <fullName>Industrial/Mechanical Engineer</fullName>
            </value>
            <value>
                <fullName>Civil Engineers/Enviro Engineer</fullName>
            </value>
            <value>
                <fullName>Electrical Engineer</fullName>
            </value>
            <value>
                <fullName>Advanced Data Analysis</fullName>
            </value>
            <value>
                <fullName>Management/Strategy Consulting</fullName>
            </value>
            <value>
                <fullName>LEED, ISO or EStar Experience</fullName>
            </value>
            <value>
                <fullName>Strong leadership/people skills</fullName>
            </value>
            <value>
                <fullName>Advanced Communication Skills</fullName>
            </value>
            <value>
                <fullName>Advanced Financial Analysis</fullName>
            </value>
            <value>
                <fullName>Supply chain/Product logistics</fullName>
            </value>
            <value>
                <fullName>Power Grid Knowledge</fullName>
            </value>
            <value>
                <fullName>Renewables Experience</fullName>
            </value>
            <value>
                <fullName>Manufacturing on-site experience</fullName>
            </value>
            <value>
                <fullName>Other Engineer(s)</fullName>
            </value>
            <value>
                <fullName>Other (See Matching Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>