force-app/main/default/objects/Climate_Corps_Engagement__c/fields/FellowContactEmail__c.field-meta.xml
<CustomField>
    <fullName>FellowContactEmail__c</fullName>
    <formula>Fellow_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellow Email</label>
    <type>Text</type>
</CustomField>