force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_City__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_City__c</fullName>
    <formula>Host_Application__r.Fellowship_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellowship City</label>
    <type>Text</type>
</CustomField>