force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Fellowship_Feedback_Survey__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Feedback_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fellow indicated they submitted the fellowship feedback survey</inlineHelpText>
    <label>Fellowship Feedback Survey</label>
    <type>Checkbox</type>
</CustomField>