force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Final_Deliverables_Other_Area__c.field-meta.xml
<CustomField>
    <fullName>Final_Deliverables_Other_Area__c</fullName>
    <description>If the values are not present in the multi select enter your won value here</description>
    <inlineHelpText>your own previous fellowship value</inlineHelpText>
    <label>Final Deliverables Other Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>