force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <description>Enter funding source if the engagement is not self-funded.</description>
    <inlineHelpText>If supported by corporate foundation, please enter the account for that organization in &apos;Corporate Foundation Funding&apos;</inlineHelpText>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barr Foundation</fullName>
            </value>
            <value>
                <fullName>Robertson Foundation</fullName>
            </value>
            <value>
                <fullName>EDF Climate Corps/CPP</fullName>
            </value>
            <value>
                <fullName>Other EDF Program</fullName>
            </value>
            <value>
                <fullName>Foundation to organization</fullName>
            </value>
            <value>
                <fullName>Foundation to EDF</fullName>
            </value>
            <value>
                <fullName>Funding needed</fullName>
            </value>
            <value>
                <fullName>Donor to EDF</fullName>
            </value>
            <value>
                <fullName>Boone (TX)</fullName>
            </value>
            <value>
                <fullName>Trammel Crow</fullName>
            </value>
            <value>
                <fullName>Ayrshire</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Donor to Organization</fullName>
            </value>
            <value>
                <fullName>Company to organization</fullName>
            </value>
            <value>
                <fullName>Reis Foundation</fullName>
            </value>
            <value>
                <fullName>McKnight Foundation</fullName>
            </value>
            <value>
                <fullName>EDF Paid</fullName>
            </value>
            <value>
                <fullName>Host Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>