force-app/main/default/objects/Climate_Corps_Engagement__c/fields/GHG_Target_Type__c.field-meta.xml
<CustomField>
    <fullName>GHG_Target_Type__c</fullName>
    <label>GHG Target Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absolute goals or targets</fullName>
            </value>
            <value>
                <fullName>Science-based goals or targets</fullName>
            </value>
            <value>
                <fullName>Intensity-based goals or targets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>