force-app/main/default/objects/Climate_Corps_Engagement__c/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a strategic host for engagement management?</inlineHelpText>
    <label>Highly Strategic Host</label>
    <type>Checkbox</type>
</CustomField>