force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Host_Application__c.field-meta.xml
<CustomField>
    <fullName>Host_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Application</label>
    <referenceTo>Host_Application__c</referenceTo>
    <relationshipLabel>Climate Corps Engagements</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>