force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Host_priorities_for_the_future__c.field-meta.xml
<CustomField>
    <fullName>Host_priorities_for_the_future__c</fullName>
    <inlineHelpText>Capture information valuable to relationship management.</inlineHelpText>
    <label>Host priorities for the future</label>
    <type>TextArea</type>
</CustomField>